update text on cover, footer, story, style

--- a/css/style.css
+++ b/css/style.css
@@ -952,14 +952,14 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-
 .swiper-container-flip .swiper-slide-shadow-left,
 .swiper-container-flip .swiper-slide-shadow-right{z-index:0;-webkit-backface-visibility:hidden;backface-visibility:hidden}
 @charset "UTF-8";
-.website-blocks{background-color:#4F2F2B}
+.website-blocks{background-color:#001a32}
 .website-blocks,.website-cover,.navbar{box-shadow:0 0 2rem rgba(0,0,0,0.1)}
 /*! * Bootstrap v4.0.0-beta (https://getbootstrap.com) * Copyright 2011-2017 The Bootstrap Authors * Copyright 2011-2017 Twitter,Inc. * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE) */
 @media print{*,*::before,*::after{text-shadow:none !important;box-shadow:none !important}a:not(.btn){text-decoration:underline}abbr[title]::after{content:" (" attr(title) ")"}pre{white-space:pre-wrap !important}pre,blockquote{border:1px solid #adb5bd;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}@page{a.badge{size:a3}}body{min-width:992px !important}.container{min-width:992px !important}.navbar{display:none}.badge{border:1px solid #000}.table{border-collapse:collapse !important}.table td,.table th{background-color:#fff !important}.table-bordered th,.table-bordered td{border:1px solid #dee2e6 !important}.table-dark{color:inherit}.table-dark th,.table-dark td,.table-dark thead th,.table-dark tbody + tbody{border-color:#dee2e6}.table .thead-dark th{color:inherit;border-color:#dee2e6}}
 *,*::before,*::after{box-sizing:border-box}
 html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0)}
 article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{display:block}
-body{margin:0;font-family:"Merriweather",serif;font-size:1rem;font-weight:400;line-height:1.5;color:#B76E79;text-align:left;background-color:#4F2F2B}
+body{margin:0;font-family:"Merriweather",serif;font-size:1rem;font-weight:400;line-height:1.5;color:#B76E79;text-align:left;background-color:#001A32}
 [tabindex="-1"]:focus:not(:focus-visible){outline:0 !important}
 hr{box-sizing:content-box;height:0;overflow:visible}
 h1,h2,h3,h4,h5,h6{margin-top:0;margin-bottom:0.5rem}
@@ -1036,7 +1036,7 @@ mark,.mark{padding:0.2em;background-color:#fcf8e3}
 .blockquote-footer{display:block;font-size:80%;color:#6c757d}
 .blockquote-footer::before{content:"— "}
 .img-fluid{max-width:100%;height:auto}
-.img-thumbnail{padding:0.25rem;background-color:#4F2F2B;border:1px solid #dee2e6;max-width:100%;height:auto}
+.img-thumbnail{padding:0.25rem;background-color:#001A32;border:1px solid #dee2e6;max-width:100%;height:auto}
 .figure{display:inline-block}
 .figure-img{margin-bottom:0.5rem;line-height:1}
 .figure-caption{font-size:90%;color:#6c757d}
@@ -1285,10 +1285,10 @@ a.btn.disabled,.addtocalendar a.disabled.atcb-link,fieldset:disabled a.btn,field
 .btn-light.disabled,.btn-light:disabled{color:#fff;background-color:#8C6661;border-color:#8C6661}
 .btn-light:not(:disabled):not(.disabled):active,.btn-light:not(:disabled):not(.disabled).active,.show>.btn-light.dropdown-toggle{color:#fff;background-color:#6e504c;border-color:#664b47}
 .btn-light:not(:disabled):not(.disabled):active:focus,.btn-light:not(:disabled):not(.disabled).active:focus,.show>.btn-light.dropdown-toggle:focus{box-shadow:0 0 0 0.2rem rgba(157,125,121,0.5)}
-.btn-dark{color:#fff;background-color:#351B1A;border-color:#351B1A}
+.btn-dark{color:#fff;background-color:#001A32;border-color:#001A32}
 .btn-dark:hover{color:#fff;background-color:#1b0e0d;border-color:#130a09}
 .btn-dark:focus,.btn-dark.focus{color:#fff;background-color:#1b0e0d;border-color:#130a09;box-shadow:0 0 0 0.2rem rgba(83,61,60,0.5)}
-.btn-dark.disabled,.btn-dark:disabled{color:#fff;background-color:#351B1A;border-color:#351B1A}
+.btn-dark.disabled,.btn-dark:disabled{color:#fff;background-color:#001A32;border-color:#001A32}
 .btn-dark:not(:disabled):not(.disabled):active,.btn-dark:not(:disabled):not(.disabled).active,.show>.btn-dark.dropdown-toggle{color:#fff;background-color:#130a09;border-color:#0a0505}
 .btn-dark:not(:disabled):not(.disabled):active:focus,.btn-dark:not(:disabled):not(.disabled).active:focus,.show>.btn-dark.dropdown-toggle:focus{box-shadow:0 0 0 0.2rem rgba(83,61,60,0.5)}
 .btn-outline-primary,.addtocalendar .atcb-link{color:#B76E79;border-color:#B76E79}
@@ -1333,11 +1333,11 @@ a.btn.disabled,.addtocalendar a.disabled.atcb-link,fieldset:disabled a.btn,field
 .btn-outline-light.disabled,.btn-outline-light:disabled{color:#8C6661;background-color:transparent}
 .btn-outline-light:not(:disabled):not(.disabled):active,.btn-outline-light:not(:disabled):not(.disabled).active,.show>.btn-outline-light.dropdown-toggle{color:#fff;background-color:#8C6661;border-color:#8C6661}
 .btn-outline-light:not(:disabled):not(.disabled):active:focus,.btn-outline-light:not(:disabled):not(.disabled).active:focus,.show>.btn-outline-light.dropdown-toggle:focus{box-shadow:0 0 0 0.2rem rgba(140,102,97,0.5)}
-.btn-outline-dark{color:#351B1A;border-color:#351B1A}
-.btn-outline-dark:hover{color:#fff;background-color:#351B1A;border-color:#351B1A}
+.btn-outline-dark{color:#001A32;border-color:#001A32}
+.btn-outline-dark:hover{color:#fff;background-color:#001A32;border-color:#001A32}
 .btn-outline-dark:focus,.btn-outline-dark.focus{box-shadow:0 0 0 0.2rem rgba(53,27,26,0.5)}
-.btn-outline-dark.disabled,.btn-outline-dark:disabled{color:#351B1A;background-color:transparent}
-.btn-outline-dark:not(:disabled):not(.disabled):active,.btn-outline-dark:not(:disabled):not(.disabled).active,.show>.btn-outline-dark.dropdown-toggle{color:#fff;background-color:#351B1A;border-color:#351B1A}
+.btn-outline-dark.disabled,.btn-outline-dark:disabled{color:#001A32;background-color:transparent}
+.btn-outline-dark:not(:disabled):not(.disabled):active,.btn-outline-dark:not(:disabled):not(.disabled).active,.show>.btn-outline-dark.dropdown-toggle{color:#fff;background-color:#001A32;border-color:#001A32}
 .btn-outline-dark:not(:disabled):not(.disabled):active:focus,.btn-outline-dark:not(:disabled):not(.disabled).active:focus,.show>.btn-outline-dark.dropdown-toggle:focus{box-shadow:0 0 0 0.2rem rgba(53,27,26,0.5)}
 .btn-link{font-weight:400;color:#B76E79;text-decoration:none}
 .btn-link:hover{color:#cfa02a;text-decoration:underline}
@@ -1468,9 +1468,9 @@ input[type="submit"].btn-block,input[type="reset"].btn-block,input[type="button"
 .custom-file-label::after{position:absolute;top:0;right:0;bottom:0;z-index:3;display:block;height:calc(1.5em + 0.75rem);padding:0.375rem 0.75rem;line-height:1.5;color:#495057;content:"Browse";background-color:#e9ecef;border-left:inherit}
 .custom-range{width:100%;height:1.4rem;padding:0;background-color:transparent;appearance:none}
 .custom-range:focus{outline:none}
-.custom-range:focus::-webkit-slider-thumb{box-shadow:0 0 0 1px #4F2F2B,0 0 0 0.2rem rgba(224,189,101,0.25)}
-.custom-range:focus::-moz-range-thumb{box-shadow:0 0 0 1px #4F2F2B,0 0 0 0.2rem rgba(224,189,101,0.25)}
-.custom-range:focus::-ms-thumb{box-shadow:0 0 0 1px #4F2F2B,0 0 0 0.2rem rgba(224,189,101,0.25)}
+.custom-range:focus::-webkit-slider-thumb{box-shadow:0 0 0 1px #001A32,0 0 0 0.2rem rgba(224,189,101,0.25)}
+.custom-range:focus::-moz-range-thumb{box-shadow:0 0 0 1px #001A32,0 0 0 0.2rem rgba(224,189,101,0.25)}
+.custom-range:focus::-ms-thumb{box-shadow:0 0 0 1px #001A32,0 0 0 0.2rem rgba(224,189,101,0.25)}
 .custom-range::-moz-focus-outer{border:0}
 .custom-range::-webkit-slider-thumb{width:1rem;height:1rem;margin-top:-0.25rem;background-color:#B76E79;border:0;transition:background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;appearance:none}
 @media (prefers-reduced-motion:reduce){.custom-range::-webkit-slider-thumb{transition:none}}
@@ -1502,7 +1502,7 @@ input[type="submit"].btn-block,input[type="reset"].btn-block,input[type="button"
 .nav-tabs .nav-link{border:1px solid transparent}
 .nav-tabs .nav-link:hover,.nav-tabs .nav-link:focus{border-color:#e9ecef #e9ecef #dee2e6}
 .nav-tabs .nav-link.disabled{color:#6c757d;background-color:transparent;border-color:transparent}
-.nav-tabs .nav-link.active,.nav-tabs .nav-item.show .nav-link{color:#495057;background-color:#4F2F2B;border-color:#dee2e6 #dee2e6 #4F2F2B}
+.nav-tabs .nav-link.active,.nav-tabs .nav-item.show .nav-link{color:#495057;background-color:#001A32;border-color:#dee2e6 #dee2e6 #001A32}
 .nav-tabs .dropdown-menu{margin-top:-1px}
 .nav-pills .nav-link.active,.nav-pills .show>.nav-link{color:#fff;background-color:#B76E79}
 .nav-fill .nav-item{flex:1 1 auto;text-align:center}
@@ -1629,7 +1629,7 @@ a.badge-danger:focus,a.badge-danger.focus{outline:0;box-shadow:0 0 0 0.2rem rgba
 .badge-light{color:#fff;background-color:#8C6661}
 a.badge-light:hover,a.badge-light:focus{color:#fff;background-color:#6e504c}
 a.badge-light:focus,a.badge-light.focus{outline:0;box-shadow:0 0 0 0.2rem rgba(140,102,97,0.5)}
-.badge-dark{color:#fff;background-color:#351B1A}
+.badge-dark{color:#fff;background-color:#001A32}
 a.badge-dark:hover,a.badge-dark:focus{color:#fff;background-color:#130a09}
 a.badge-dark:focus,a.badge-dark.focus{outline:0;box-shadow:0 0 0 0.2rem rgba(53,27,26,0.5)}
 .jumbotron{padding:2rem 1rem;margin-bottom:2rem;background-color:#e9ecef}
@@ -1838,7 +1838,7 @@ a.bg-warning:hover,a.bg-warning:focus,button.bg-warning:hover,button.bg-warning:
 a.bg-danger:hover,a.bg-danger:focus,button.bg-danger:hover,button.bg-danger:focus{background-color:#bd2130 !important}
 .bg-light{background-color:#8C6661 !important}
 a.bg-light:hover,a.bg-light:focus,button.bg-light:hover,button.bg-light:focus{background-color:#6e504c !important}
-.bg-dark{background-color:#351B1A !important}
+.bg-dark{background-color:#001A32 !important}
 a.bg-dark:hover,a.bg-dark:focus,button.bg-dark:hover,button.bg-dark:focus{background-color:#130a09 !important}
 .bg-white{background-color:#fff !important}
 .bg-transparent{background-color:transparent !important}
@@ -1859,7 +1859,7 @@ a.bg-dark:hover,a.bg-dark:focus,button.bg-dark:hover,button.bg-dark:focus{backgr
 .border-warning{border-color:#ffc107 !important}
 .border-danger{border-color:#dc3545 !important}
 .border-light{border-color:#8C6661 !important}
-.border-dark{border-color:#351B1A !important}
+.border-dark{border-color:#001A32 !important}
 .border-white{border-color:#fff !important}
 .rounded-sm{border-radius:0.2rem !important}
 .rounded{border-radius:0.25rem !important}
@@ -2104,7 +2104,7 @@ a.text-warning:hover,a.text-warning:focus{color:#ba8b00 !important}
 a.text-danger:hover,a.text-danger:focus{color:#a71d2a !important}
 .text-light{color:#8C6661 !important}
 a.text-light:hover,a.text-light:focus{color:#5f4542 !important}
-.text-dark{color:#351B1A !important}
+.text-dark{color:#001A32 !important}
 a.text-dark:hover,a.text-dark:focus{color:#020101 !important}
 .text-body{color:#B76E79 !important}
 .text-muted{color:#6c757d !important}
@@ -3921,7 +3921,7 @@ body[data-aos-easing="ease-in-out-quart"] [data-aos],[data-aos][data-aos][data-a
 .btn-outline-white.disabled,.btn-outline-white:disabled{color:#fff;background-color:transparent}
 .btn-outline-white:not(:disabled):not(.disabled):active,.btn-outline-white:not(:disabled):not(.disabled).active,.show>.btn-outline-white.dropdown-toggle{color:#212529;background-color:#fff;border-color:#fff}
 .btn-outline-white:not(:disabled):not(.disabled):active:focus,.btn-outline-white:not(:disabled):not(.disabled).active:focus,.show>.btn-outline-white.dropdown-toggle:focus{box-shadow:0 0 0 0.2rem rgba(255,255,255,0.5)}
-.has-divider{background-color:#4F2F2B;-webkit-mask-size:cover,100% 50px;-webkit-mask-position:top center;-webkit-mask-repeat:no-repeat;-webkit-mask-composite:source-out;margin-top:-50px}
+.has-divider{background-color:#001A32;-webkit-mask-size:cover,100% 50px;-webkit-mask-position:top center;-webkit-mask-repeat:no-repeat;-webkit-mask-composite:source-out;margin-top:-50px}
 .has-divider:before{content:"";height:50px;display:block;width:100%}
 .has-divider + :after{content:"";height:50px;display:block;width:100%}
 .divider-wave{-webkit-mask-image:url(../assets/images/square.svg),url(../assets/images/divider-wave.svg)}
@@ -3970,8 +3970,8 @@ body[data-aos-easing="ease-in-out-quart"] [data-aos],[data-aos][data-aos][data-a
 .text-link-danger a{color:#dc3545}
 .text-heading-light h1,.text-heading-light h2,.text-heading-light h3,.text-heading-light h4,.text-heading-light h5,.text-heading-light h6,.text-heading-light .h1,.text-heading-light .h2,.text-heading-light .h3,.text-heading-light .h4,.text-heading-light .h5,.text-heading-light .h6{color:#8C6661}
 .text-link-light a{color:#8C6661}
-.text-heading-dark h1,.text-heading-dark h2,.text-heading-dark h3,.text-heading-dark h4,.text-heading-dark h5,.text-heading-dark h6,.text-heading-dark .h1,.text-heading-dark .h2,.text-heading-dark .h3,.text-heading-dark .h4,.text-heading-dark .h5,.text-heading-dark .h6{color:#351B1A}
-.text-link-dark a{color:#351B1A}
+.text-heading-dark h1,.text-heading-dark h2,.text-heading-dark h3,.text-heading-dark h4,.text-heading-dark h5,.text-heading-dark h6,.text-heading-dark .h1,.text-heading-dark .h2,.text-heading-dark .h3,.text-heading-dark .h4,.text-heading-dark .h5,.text-heading-dark .h6{color:#001A32}
+.text-link-dark a{color:#001A32}
 .text-heading-black h1,.text-heading-black h2,.text-heading-black h3,.text-heading-black h4,.text-heading-black h5,.text-heading-black h6,.text-heading-black .h1,.text-heading-black .h2,.text-heading-black .h3,.text-heading-black .h4,.text-heading-black .h5,.text-heading-black .h6{color:#000}
 .text-link-black a{color:#000}
 .text-heading-white h1,.text-heading-white h2,.text-heading-white h3,.text-heading-white h4,.text-heading-white h5,.text-heading-white h6,.text-heading-white .h1,.text-heading-white .h2,.text-heading-white .h3,.text-heading-white .h4,.text-heading-white .h5,.text-heading-white .h6{color:#fff}
@@ -4017,7 +4017,7 @@ body[data-aos-easing="ease-in-out-quart"] [data-aos],[data-aos][data-aos][data-a
 .website-blocks.has-cover{height:100vh;overflow:hidden}
 .website-blocks.has-cover ~ *{display:none !important}
 .website-blocks:not(.has-cover) .website-cover{transform:translateY(-100%)}
-.website-cover{background:#4F2F2B;position:fixed;z-index:1050;width:100%;height:100%;overflow:hidden;overflow-y:scroll;display:flex;align-items:stretch;justify-content:stretch;transition:cubic-bezier(0.2,0,0,1) 2s}
+.website-cover{background:#001A32;position:fixed;z-index:1050;width:100%;height:100%;overflow:hidden;overflow-y:scroll;display:flex;align-items:stretch;justify-content:stretch;transition:cubic-bezier(0.2,0,0,1) 2s}
 .website-cover>section{width:100%;min-height:100%}
 .website-cover>section>.container,.website-cover>section>.container-fluid,.website-cover>section>.container-sm,.website-cover>section>.container-md,.website-cover>section>.container-lg,.website-cover>section>.container-xl{align-self:center}
 .website-cover .btn-floating{position:absolute;bottom:2rem;left:0;z-index:1;width:100%;display:flex;align-items:center;justify-content:center}
